<?xml version="1.0" encoding="UTF-8"?>
<project>
	<modelVersion>4.0.0</modelVersion>
	<groupId>ea2ddl</groupId>
	<artifactId>ea2ddl</artifactId>
	<packaging>jar</packaging>
	<name>ea2ddl</name>
	<version>0.1-SNAPSHOT</version>
	<url>http://ea2ddl.sourceforge.jp</url>

	<properties>
		<s2.version>2.4.30</s2.version>
	</properties>
	
	<repositories>
		<repository>
			<id>internal</id>
			<name>Internal Repository</name>
			<url>file:${basedir}/../mfgs-project/repository</url>
		</repository>
		<repository>
			<id>maven.seasar.org</id>
			<name>The Seasar Foundation Maven2 Repository</name>
			<url>http://maven.seasar.org/maven2</url>
		</repository>
		<repository>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<id>snapshot.maven.seasar.org</id>
			<name>The Seasar Foundation Maven2 Snapshot Repository</name>
			<url>http://maven.seasar.org/maven2-snapshot</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.seasar.container</groupId>
			<artifactId>s2-tiger</artifactId>
			<version>${s2.version}</version>
		</dependency>
		<dependency>
			<groupId>org.seasar.container</groupId>
			<artifactId>s2-extension</artifactId>
			<version>${s2.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.3</version>
		</dependency>
		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<version>3.2</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.14</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit-addons</groupId>
			<artifactId>junit-addons</artifactId>
			<version>1.4</version>
			<type>jar</type>
			<scope>test</scope>
			<exclusions>
			<exclusion>
				<groupId>junit-addons</groupId>
				<artifactId>junit-addons-runner</artifactId>
			</exclusion>
			<exclusion>
				<groupId>xerces</groupId>
				<artifactId>xercesImpl</artifactId>
			</exclusion>
			<exclusion>
				<groupId>xerces</groupId>
				<artifactId>xmlParserAPIs</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/</url>
		</license>
	</licenses>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<encoding>UTF-8</encoding>
						<source>1.5</source>
						<target>1.5</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<executions>
						<execution>
							<phase>package</phase>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<artifactId>maven-javadoc-plugin</artifactId>
					<executions>
						<execution>
							<phase>package</phase>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<source>1.5</source>
						<encoding>UTF-8</encoding>
						<docencoding>UTF-8</docencoding>
						<charset>UTF-8</charset>
						<locales>ja</locales>
						<aggregate>true</aggregate>
						<additionalJOption>-J-Xmx512m</additionalJOption>
						<links>
							<link>http://java.sun.com/javase/ja/6/docs/ja/api/</link>
							<link>http://java.sun.com/j2ee/1.4/docs/api/</link>
							<link>http://aopalliance.sourceforge.net/doc/</link>
						</links>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<configuration>
						<updateReleaseInfo>true</updateReleaseInfo>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<configuration>
						<forkMode>once</forkMode>
						<argLine>
							-Xmx512m -XX:PermSize=128m -XX:MaxPermSize=256m
						</argLine>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	
</project>